# cpp-cmake-ctest-template

./: .gitignore  1-configure-pre-commit.bat  1-pre-commit  2-create-git-ignore.bat  3-install-package-manager.bat  4-install-windows-enviroment.bat  4-install-wsl-environment.sh  5-format-code.bat  6_download_plantuml.bat  7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-configure-app-windows.bat  9-clean-project.bat  CMakeLists.txt  DoxyfileLibLinux  DoxyfileLibWin  DoxyfileTestLinux  DoxyfileTestWin  astyle-options.txt  mkdocs.yml
.github/workflows/: cpp.yml
docs/: architecture.md  developers.md  index.md  security.md
report_doc_lib_hist_linux/: 2023-10-28_20-28-59_CoverageHistory.xml  2023-10-28_20-32-34_CoverageHistory.xml  2023-10-28_20-36-22_CoverageHistory.xml
report_doc_lib_hist_win/: 2023-10-28_19-30-26_CoverageHistory.xml
report_doc_test_hist_linux/: 2023-10-28_20-29-30_CoverageHistory.xml  2023-10-28_20-33-06_CoverageHistory.xml  2023-10-28_20-36-53_CoverageHistory.xml
report_doc_test_hist_win/: 2023-10-28_19-30-27_CoverageHistory.xml
report_test_hist_win/: 2023-10-28_19-31-41_CoverageHistory.xml
src/: namespaces.dox
src/calculator/: CMakeLists.txt
src/calculator/header/: calculator.h
src/calculator/src/: calculator.cpp
src/calculatorapp/: CMakeLists.txt
src/calculatorapp/header/: calculatorapp.h
src/calculatorapp/src/: calculatorapp.cpp
src/tests/: CMakeLists.txt
src/tests/calculator/: CMakeLists.txt  calculator_test.cpp
src/tests/utility/: CMakeLists.txt  utility_test.cpp
src/utility/: CMakeLists.txt
src/utility/header/: commonTypes.h  mathUtility.h
src/utility/src/: mathUtility.cpp
